Authentication commit
