# apps/auth-service/src/controllers/auth.controller.ts
@@ -1,15 +1,20 @@
 import { NextFunction, Request, Response } from "express"
 import prisma from "../../../../packages/libs/prisma"
-import { ValidationError } from "../../../../packages/error-handler"
-import { checkOtpRestrictions, sendOtp, trackOtpRequests } from "../utils/auth.helper"
-
+import { AuthError, ValidationError } from "../../../../packages/error-handler"
+import { checkOtpRestrictions, handleForgotPassword, sendOtp, trackOtpRequests, verifyForgotPasswordOtp, verifyOtp } from "../utils/auth.helper"
+import bcrypt from "bcryptjs"
+import jwt from "jsonwebtoken"
+import { setCookie } from "../utils/cookies/setCookies"
 
 // Register a new user
 export const userRegistration = async (req: Request, res: Response, next: NextFunction) => {
   try {
     const { name, email } = req.body
 
-    const existingUser = await prisma.users.findUnique({ where: email })
+    console.log(email, name);
+    
+
+    const existingUser = await prisma.users.findUnique({ where: { email } })
 
     if (existingUser) {
       return next(new ValidationError("User already exists with this email"))
@@ -17,7 +22,7 @@ export const userRegistration = async (req: Request, res: Response, next: NextFu
 
     await checkOtpRestrictions(email, next)
     await trackOtpRequests(email, next)
-    await sendOtp(email, name, "user-activation-mail")
+    await sendOtp(name, email, "user-activation-mail")
 
     res.status(200).json({
       message: "OTP sent to email. Please verify your account"
@@ -26,3 +31,141 @@ export const userRegistration = async (req: Request, res: Response, next: NextFu
     return next(error)
   }
 }
+
+
+// verify user with otp
+export const verifyUser = async(req:Request, res:Response, next:NextFunction) => {
+  try {
+    const { email, otp, password, name } = req.body
+    if (!email || !otp || !password || !name) {
+      return next(new ValidationError("All fields are required"))
+    }
+    const existingUser = await prisma.users.findUnique({
+      where: { email }
+    })
+
+    if(existingUser) {
+      return next(new ValidationError("User already exists with this email!"))
+    }
+
+    await verifyOtp(email, otp, next)
+
+    const hashedPassword = await bcrypt.hash(password, 10)
+
+    const user = await prisma.users.create({
+      data: {
+        name,
+        email,
+        password: hashedPassword
+      }
+    })
+
+    res.status(201).json({
+      success: true,
+      message: "User registered successfully",
+      user
+    })
+  } catch (error) {
+    return next(error)
+  }
+}
+
+
+// login user
+export const loginUser = async(req: Request, res: Response, next: NextFunction) => {
+  try {
+    const { email, password } = req.body
+
+    if(!email || !password) {
+      throw new ValidationError("Email and password are required!")
+    }
+
+    const user = await prisma.users.findUnique({
+      where: { email }
+    })
+
+    if(!user) {
+      throw new AuthError("User doesn't exists!")
+    }
+
+    // verify password
+    const isMatch = await bcrypt.compare(password, user.password!)
+    if(!isMatch) {
+      throw new AuthError("Invalid email or password")
+    }
+
+    // Generate access and refreshtoken
+    const accessToken = jwt.sign(
+      { id: user.id, role: "user" },
+      process.env.ACCESS_TOKEN_SECRET as string,
+      { expiresIn: "15m" }
+    )
+
+    const refreshToken = jwt.sign(
+      { id: user.id, role: "user" },
+      process.env.REFRESH_TOKEN_SECRET as string,
+      { expiresIn: "7d" }
+    )
+
+    // store the refresh and access token in an httpOnly secure cookies
+    setCookie(res, "refresh_token", refreshToken)
+    setCookie(res, "access_token", accessToken)
+
+    res.status(200).json({
+      message: "Login successful!",
+      user: { id: user.id, email: user.email, name: user.name },
+    })
+  } catch (error) {
+    return next(error)
+  }
+}
+
+// user forgot password
+export const userForgotPassword = async(req: Request, res: Response, next: NextFunction) => {
+   await handleForgotPassword(req, res, next, "user")
+}
+
+// Verify forgot password OTP
+export const verifyUserForgotPassword = async(req: Request, res: Response, next: NextFunction) => {
+  await verifyForgotPasswordOtp(req, res, next)
+}
+
+
+// Reset user password
+export const resetUserPassword = async(req: Request, res: Response, next: NextFunction) => {
+  try {
+    const { email, newPassword } = req.body
+    
+    if(!email || !newPassword) {
+      throw new ValidationError("Email and new password are required!")
+    }
+
+    const user = await prisma.users.findUnique({
+      where: { email }
+    })
+
+    if (!user) {
+      throw new ValidationError("User not found!")
+    }
+
+    // compare new password with the existing one
+    const isSamePassword = await bcrypt.compare(newPassword, user.password!)
+    if(isSamePassword) {
+      throw new ValidationError("New Password cannot be the same as the old password!")
+    }
+
+    // hash the new password
+    const hashedPassword = await bcrypt.hash(newPassword, 10)
+    
+    await prisma.users.update({
+      where: { email },
+      data: { password: hashedPassword }
+    })
+
+    res.status(200).json({ message: "Password reset successfully" })
+
+  } catch (error) {
+    return next(error)
+  }
+}
+
