# apps/auth-service/src/routes/auth.router.ts
@@ -1,9 +1,14 @@
 import express, { Router } from "express"
-import { userRegistration } from "../controllers/auth.controller"
+import { loginUser, resetUserPassword, userForgotPassword, userRegistration, verifyUser, verifyUserForgotPassword } from "../controllers/auth.controller"
 
 const router: Router = express.Router()
 
 router.post("/user-registration", userRegistration)
+router.post("/verify-user", verifyUser)
+router.post("/login", loginUser)
+router.post("/forgot-password-user", userForgotPassword)
+router.post("/verify-forgot-password-user", verifyUserForgotPassword)
+router.post("/reset-password-user", resetUserPassword)
 
 
 export default router
